# vuln-apps

./: .gitignore  README.md  check_hash.py  docker-compose.yml  generate_hash.py  init.sql
.cursor/rules/: repository-guidelines.mdc
app/: app.py  requirements.txt
app-1-basic/fixed/: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql
app-1-basic/fixed/app/: app.py  requirements.txt
app-1-basic/vulnerable/: README.md  docker-compose.yml
app-1-basic/vulnerable/app/: app.py
app-2-graphql/vulnerable/: .gitignore  README.md  docker-compose.yml  init.sql
app-2-graphql/vulnerable/api/: Dockerfile  main.py  requirements.txt
app-2-graphql/vulnerable/frontend/: Dockerfile  app.js  index.html  styles.css
app-3-api-credentials/vulnerable/: README.md  docker-compose.yml
app-3-api-credentials/vulnerable/app/: app.py
app-4-nextjs-rce/vulnerable/: README.md  docker-compose.yml  package.json
app-5-traffic-logger/: README.md  docker-compose.yml
app-5-traffic-logger/app/: app.py
app-6-https-pcap-logger/: README.md  docker-compose.yml  generate-certs.sh  nginx.conf
app-6-https-pcap-logger/app/: app.py
app-7-ssrf/vulnerable/: docker-compose.yml
app-broker-test/: .gitignore  README.md  docker-compose.yml
app-broker-test/app/: app.py
app/templates/: dashboard.html  index.html  login.html
browser-use-simple/: agent.py  pyproject.toml
browser-use-tests/: .env.example  .gitignore  README.md  agent.py  agent_browser_state.py  agent_state_restore.py  agent_state_store.py  debug_dom.py  pyproject.toml
landing/: index.html
(+18 files in other folders)
